--- a/res/layout/lolcat_activity.xml
+++ b/res/layout/lolcat_activity.xml
@@ -26,7 +26,7 @@
     android:layout_height="fill_parent">
 
     <!-- Main image -->
-    <com.google.android.panoramio.LolcatView android:id="@+id/main_image"
+    <com.doublesunflower.android.lockcast.LolcatView android:id="@+id/main_image"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_weight="1"
