minor changes + landscape mode also considered for layout-land/lolcat_activity.xml

--- a/res/layout/lolcat_activity.xml
+++ b/res/layout/lolcat_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
- * Copyright (c) 2008 Google Inc.
+ * Copyright (c) 2010 DSF Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
  */
 -->
 
-<!-- PORTRAIT MODE layout for LolcatActivity. -->
+<!-- Landscape MODE layout for LolcatActivity. -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
