--- a/res/layout-land/lolcat_activity.xml
+++ b/res/layout-land/lolcat_activity.xml
@@ -26,7 +26,7 @@
     android:layout_height="fill_parent">
 
     <!-- Main image -->
-    <com.google.android.Panoramio.LolcatView android:id="@+id/main_image"
+    <com.doublesunflower.android.lockcast.LolcatView android:id="@+id/main_image"
                android:layout_height="fill_parent"
                android:layout_width="1dip"
                android:layout_weight="30"
